ffi/poc/codec/crates/ak-abi/src/generated_corpus/abi.rs

impl ak_efix_TaskOptions {
    pub const ZERO: Self = ak_efix_TaskOptions {
        max_duration: ak_efix_Duration::ZERO,
        max_retries: 0,
        priority: 0,
        partition_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        application_name: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        application_version: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        application_namespace: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        application_service: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        engine_type: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}
pub const AK_EFIX_TASKOPTIONS_PRESENT_MAX_DURATION: u32 = 1 << 0;

/// Decode group for `TaskOptions`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_TaskOptions {
    pub max_duration: ak_dfix_Duration,
    pub max_retries: i32,
    pub priority: i32,
    pub partition_id: ak_span,
    pub application_name: ak_span,
    pub application_version: ak_span,
    pub application_namespace: ak_span,
    pub application_service: ak_span,
    pub engine_type: ak_span,
    pub presence: u32,
}
impl ak_dfix_TaskOptions {
    pub const ZERO: Self = ak_dfix_TaskOptions {
        max_duration: ak_dfix_Duration::ZERO,
        max_retries: 0,
        priority: 0,
        partition_id: ak_span { off: 0, len: 0, coder: 0 },
        application_name: ak_span { off: 0, len: 0, coder: 0 },
        application_version: ak_span { off: 0, len: 0, coder: 0 },
        application_namespace: ak_span { off: 0, len: 0, coder: 0 },
        application_service: ak_span { off: 0, len: 0, coder: 0 },
        engine_type: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}
pub const AK_DFIX_TASKOPTIONS_PRESENT_MAX_DURATION: u32 = 1 << 0;

/// Encode group for `TaskOptions`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_TaskOptions {
    pub max_duration: ak_ufix_Duration,
    pub max_retries: i32,
    pub priority: i32,
    pub partition_id: ak_str,
    pub application_name: ak_str,
    pub application_version: ak_str,
    pub application_namespace: ak_str,
    pub application_service: ak_str,
    pub engine_type: ak_str,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_TaskOptions {
    pub const ZERO: Self = ak_ufix_TaskOptions {
        max_duration: ak_ufix_Duration::ZERO,
        max_retries: 0,
        priority: 0,
        partition_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        application_name: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        application_version: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        application_namespace: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        application_service: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        engine_type: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}
pub const AK_UFIX_TASKOPTIONS_PRESENT_MAX_DURATION: u32 = 1 << 0;

/// Encode group for `TaskOutput`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_TaskOutput {
    pub success: u8,
    pub error: ak_str,
    pub presence: u32,
}
impl ak_efix_TaskOutput {
    pub const ZERO: Self = ak_efix_TaskOutput {
        success: 0,
        error: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}

/// Decode group for `TaskOutput`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_TaskOutput {
    pub success: u8,
    pub error: ak_span,
    pub presence: u32,
}
impl ak_dfix_TaskOutput {
    pub const ZERO: Self = ak_dfix_TaskOutput {
        success: 0,
        error: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}

/// Encode group for `TaskOutput`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_TaskOutput {
    pub success: u8,
    pub error: ak_str,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_TaskOutput {
    pub const ZERO: Self = ak_ufix_TaskOutput {
        success: 0,
        error: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `TaskDetailed`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_TaskDetailed {
    pub id: ak_str,
    pub session_id: ak_str,
    pub owner_pod_id: ak_str,
    pub status: i32,
    pub status_message: ak_str,
    pub options: ak_efix_TaskOptions,
    pub created_at: ak_efix_Timestamp,
    pub submitted_at: ak_efix_Timestamp,
    pub started_at: ak_efix_Timestamp,
    pub ended_at: ak_efix_Timestamp,
    pub pod_ttl: ak_efix_Timestamp,
    pub output: ak_efix_TaskOutput,
    pub pod_hostname: ak_str,
    pub received_at: ak_efix_Timestamp,
    pub acquired_at: ak_efix_Timestamp,
    pub creation_to_end_duration: ak_efix_Duration,
    pub processing_to_end_duration: ak_efix_Duration,
    pub initial_task_id: ak_str,
    pub received_to_end_duration: ak_efix_Duration,
    pub processed_at: ak_efix_Timestamp,
    pub fetched_at: ak_efix_Timestamp,
    pub payload_id: ak_str,
    pub created_by: ak_str,
    pub presence: u32,
}
impl ak_efix_TaskDetailed {
    pub const ZERO: Self = ak_efix_TaskDetailed {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        session_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        owner_pod_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        status: 0,
        status_message: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        options: ak_efix_TaskOptions::ZERO,
        created_at: ak_efix_Timestamp::ZERO,
        submitted_at: ak_efix_Timestamp::ZERO,
        started_at: ak_efix_Timestamp::ZERO,
        ended_at: ak_efix_Timestamp::ZERO,
        pod_ttl: ak_efix_Timestamp::ZERO,
        output: ak_efix_TaskOutput::ZERO,
        pod_hostname: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        received_at: ak_efix_Timestamp::ZERO,
        acquired_at: ak_efix_Timestamp::ZERO,
        creation_to_end_duration: ak_efix_Duration::ZERO,
        processing_to_end_duration: ak_efix_Duration::ZERO,
        initial_task_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        received_to_end_duration: ak_efix_Duration::ZERO,
        processed_at: ak_efix_Timestamp::ZERO,
        fetched_at: ak_efix_Timestamp::ZERO,
        payload_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        created_by: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}
pub const AK_EFIX_TASKDETAILED_PRESENT_OPTIONS: u32 = 1 << 0;
pub const AK_EFIX_TASKDETAILED_PRESENT_CREATED_AT: u32 = 1 << 1;
pub const AK_EFIX_TASKDETAILED_PRESENT_SUBMITTED_AT: u32 = 1 << 2;
pub const AK_EFIX_TASKDETAILED_PRESENT_STARTED_AT: u32 = 1 << 3;
pub const AK_EFIX_TASKDETAILED_PRESENT_ENDED_AT: u32 = 1 << 4;
pub const AK_EFIX_TASKDETAILED_PRESENT_POD_TTL: u32 = 1 << 5;
pub const AK_EFIX_TASKDETAILED_PRESENT_OUTPUT: u32 = 1 << 6;
pub const AK_EFIX_TASKDETAILED_PRESENT_RECEIVED_AT: u32 = 1 << 7;
pub const AK_EFIX_TASKDETAILED_PRESENT_ACQUIRED_AT: u32 = 1 << 8;
pub const AK_EFIX_TASKDETAILED_PRESENT_CREATION_TO_END_DURATION: u32 = 1 << 9;
pub const AK_EFIX_TASKDETAILED_PRESENT_PROCESSING_TO_END_DURATION: u32 = 1 << 10;
pub const AK_EFIX_TASKDETAILED_PRESENT_RECEIVED_TO_END_DURATION: u32 = 1 << 11;
pub const AK_EFIX_TASKDETAILED_PRESENT_PROCESSED_AT: u32 = 1 << 12;
pub const AK_EFIX_TASKDETAILED_PRESENT_FETCHED_AT: u32 = 1 << 13;

/// Decode group for `TaskDetailed`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_TaskDetailed {
    pub id: ak_span,
    pub session_id: ak_span,
    pub owner_pod_id: ak_span,
    pub status: i32,
    pub status_message: ak_span,
    pub options: ak_dfix_TaskOptions,
    pub created_at: ak_dfix_Timestamp,
    pub submitted_at: ak_dfix_Timestamp,
    pub started_at: ak_dfix_Timestamp,
    pub ended_at: ak_dfix_Timestamp,
    pub pod_ttl: ak_dfix_Timestamp,
    pub output: ak_dfix_TaskOutput,
    pub pod_hostname: ak_span,
    pub received_at: ak_dfix_Timestamp,
    pub acquired_at: ak_dfix_Timestamp,
    pub creation_to_end_duration: ak_dfix_Duration,
    pub processing_to_end_duration: ak_dfix_Duration,
    pub initial_task_id: ak_span,
    pub received_to_end_duration: ak_dfix_Duration,
    pub processed_at: ak_dfix_Timestamp,
    pub fetched_at: ak_dfix_Timestamp,
    pub payload_id: ak_span,
    pub created_by: ak_span,
    pub presence: u32,
}
impl ak_dfix_TaskDetailed {
    pub const ZERO: Self = ak_dfix_TaskDetailed {
        id: ak_span { off: 0, len: 0, coder: 0 },
        session_id: ak_span { off: 0, len: 0, coder: 0 },
        owner_pod_id: ak_span { off: 0, len: 0, coder: 0 },
        status: 0,
        status_message: ak_span { off: 0, len: 0, coder: 0 },
        options: ak_dfix_TaskOptions::ZERO,
        created_at: ak_dfix_Timestamp::ZERO,
        submitted_at: ak_dfix_Timestamp::ZERO,
        started_at: ak_dfix_Timestamp::ZERO,
        ended_at: ak_dfix_Timestamp::ZERO,
        pod_ttl: ak_dfix_Timestamp::ZERO,
        output: ak_dfix_TaskOutput::ZERO,
        pod_hostname: ak_span { off: 0, len: 0, coder: 0 },
        received_at: ak_dfix_Timestamp::ZERO,
        acquired_at: ak_dfix_Timestamp::ZERO,
        creation_to_end_duration: ak_dfix_Duration::ZERO,
        processing_to_end_duration: ak_dfix_Duration::ZERO,
        initial_task_id: ak_span { off: 0, len: 0, coder: 0 },
        received_to_end_duration: ak_dfix_Duration::ZERO,
        processed_at: ak_dfix_Timestamp::ZERO,
        fetched_at: ak_dfix_Timestamp::ZERO,
        payload_id: ak_span { off: 0, len: 0, coder: 0 },
        created_by: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}
pub const AK_DFIX_TASKDETAILED_PRESENT_OPTIONS: u32 = 1 << 0;
pub const AK_DFIX_TASKDETAILED_PRESENT_CREATED_AT: u32 = 1 << 1;
pub const AK_DFIX_TASKDETAILED_PRESENT_SUBMITTED_AT: u32 = 1 << 2;
pub const AK_DFIX_TASKDETAILED_PRESENT_STARTED_AT: u32 = 1 << 3;
pub const AK_DFIX_TASKDETAILED_PRESENT_ENDED_AT: u32 = 1 << 4;
pub const AK_DFIX_TASKDETAILED_PRESENT_POD_TTL: u32 = 1 << 5;
pub const AK_DFIX_TASKDETAILED_PRESENT_OUTPUT: u32 = 1 << 6;
pub const AK_DFIX_TASKDETAILED_PRESENT_RECEIVED_AT: u32 = 1 << 7;
pub const AK_DFIX_TASKDETAILED_PRESENT_ACQUIRED_AT: u32 = 1 << 8;
pub const AK_DFIX_TASKDETAILED_PRESENT_CREATION_TO_END_DURATION: u32 = 1 << 9;
pub const AK_DFIX_TASKDETAILED_PRESENT_PROCESSING_TO_END_DURATION: u32 = 1 << 10;
pub const AK_DFIX_TASKDETAILED_PRESENT_RECEIVED_TO_END_DURATION: u32 = 1 << 11;
pub const AK_DFIX_TASKDETAILED_PRESENT_PROCESSED_AT: u32 = 1 << 12;
pub const AK_DFIX_TASKDETAILED_PRESENT_FETCHED_AT: u32 = 1 << 13;

/// Encode group for `TaskDetailed`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_TaskDetailed {
    pub id: ak_str,
    pub session_id: ak_str,
    pub owner_pod_id: ak_str,
    pub status: i32,
    pub status_message: ak_str,
    pub options: ak_ufix_TaskOptions,
    pub created_at: ak_ufix_Timestamp,
    pub submitted_at: ak_ufix_Timestamp,
    pub started_at: ak_ufix_Timestamp,
    pub ended_at: ak_ufix_Timestamp,
    pub pod_ttl: ak_ufix_Timestamp,
    pub output: ak_ufix_TaskOutput,
    pub pod_hostname: ak_str,
    pub received_at: ak_ufix_Timestamp,
    pub acquired_at: ak_ufix_Timestamp,
    pub creation_to_end_duration: ak_ufix_Duration,
    pub processing_to_end_duration: ak_ufix_Duration,
    pub initial_task_id: ak_str,
    pub received_to_end_duration: ak_ufix_Duration,
    pub processed_at: ak_ufix_Timestamp,
    pub fetched_at: ak_ufix_Timestamp,
    pub payload_id: ak_str,
    pub created_by: ak_str,
    pub unknown: ak_blob,
    pub presence: u32,
}
